manifests/base/resources/feature-flags/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "8080"
    prometheus.io/scrape: "true"
  labels:
    app: feature-flags
    chart: feature-flags-1.11.1
    heritage: Helm
    release: feature-flags
  name: feature-flags
spec:
  ports:
  - name: feature-flags
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: feature-flags
    release: feature-flags
  type: ClusterIP
---
