manifests/base/resources/feature-flags/resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-url: http://feature-flags-edge-auth.$(NAMESPACE).svc.cluster.local:8080/v1/auth
    nginx.ingress.kubernetes.io/configuration-snippet: |
      set $host_and_uri $http_host$request_uri;
      if ( $host_and_uri ~* "^.{2049,}$" ) { return 414; }
      rewrite (?i)/api/(.*) /$1 break;
      more_clear_input_headers "X-Forwarded-Host" "X-Forwarded-For" "X-Forwarded-Proto" "X-Original-URI" "X-Original-URL";
    nginx.ingress.kubernetes.io/enable-cors: "true"
  labels:
    app: feature-flags
    chart: feature-flags-1.11.1
    heritage: Helm
    release: feature-flags
  name: feature-flags
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: feature-flags
          servicePort: 8080
        path: /api/v0/features
      - backend:
          serviceName: feature-flags
          servicePort: 8080
        path: /api/v1/features
---
